# json-logic-hs

./: .gitignore  CHANGELOG.md  README.md  flake.nix  json-logic-hs.cabal
app/: JsonLogic.hs  Main.hs
