cabal-version:      2.4
name:               json-logic-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             piyushKumar-1
maintainer:         piyush.kumar@juspay.in

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs: app
    default-extensions:
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveFunctor
      DeriveGeneric
      DuplicateRecordFields
      ExplicitNamespaces
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      ViewPatterns
      BlockArguments
      TypeSynonymInstances
      UndecidableInstances
      StandaloneDeriving
      PackageImports
      TemplateHaskell
    default-language: Haskell2010
    ghc-options: -fwrite-ide-info -hiedir=.hie -Wall -Wcompat -Widentities -fhide-source-paths -Werror
    build-depends:    
      base
      , containers
      , aeson
      , vector
      , extra
      , scientific
      , text
    exposed-modules:
      JsonLogic

executable json-logic-hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      JsonLogic

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base
      , containers
      , aeson
      , vector
      , extra
      , scientific
      , text
    hs-source-dirs:   app
    ghc-options: -fwrite-ide-info -hiedir=.hie -Wall -Wcompat -Widentities -fhide-source-paths -Werror
    default-extensions:
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveFunctor
      DeriveGeneric
      DuplicateRecordFields
      ExplicitNamespaces
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      ViewPatterns
      BlockArguments
      TypeSynonymInstances
      UndecidableInstances
      StandaloneDeriving
      PackageImports
      TemplateHaskell
    default-language: Haskell2010
